spl.output
Terminals unused in grammar

   LIST
   UMINUS


Grammar

    0 $accept: start $end

    1 start: stmt_list

    2 stmt_list: stmt stmt_list
    3          | stmt

    4 stmt: COMMENT
    5     | directive template
    6     | template
    7     | define
    8     | directive call
    9     | call
   10     | IDENT

   11 directive: '#' SUBNAME IDENT
   12          | '#' SHAPE IDENT IDENT

   13 template: TEMPLATE '(' IDENT pattern_list ')' cond '(' icode_stmt_list ')' ')'

   14 pattern_list: pattern pattern_list
   15             | pattern

   16 pattern: ICODE_MATRIX_PAT
   17        | ICODE_SCALAR_PAT
   18        | INTEGER

   19 define: DEFINE IDENT listsequence ')'

   20 call: '(' IDENT listsequence ')'

   21 icode_stmt_list: icode_stmt icode_stmt_list
   22                | icode_stmt

   23 icode_stmt: icode_do_stmt
   24           | icode_end_stmt
   25           | icode_assign_stmt
   26           | icode_matrix_call

   27 icode_do_stmt: DO INDEX_IDENT '=' icode_expr ',' icode_expr

   28 icode_end_stmt: END

   29 icode_assign_stmt: icode_ident '=' opt
   30                  | icode_ident '=' opt '+' opt
   31                  | icode_ident '=' opt '-' opt
   32                  | icode_ident '=' opt '*' opt
   33                  | icode_ident '=' opt '/' opt

   34 icode_expr: opt '+' opt
   35           | opt '-' opt
   36           | opt '*' opt
   37           | opt '/' opt
   38           | opt

   39 icode_matrix_call: ICODE_MATRIX_PAT '(' opt ',' opt ',' opt ',' opt ',' opt ',' opt ')'

   40 listsequence: listelement listsequence
   41             | listelement

   42 listelement: value
   43            | call
   44            | IDENT

   45 cond: '[' condition ']'

   46 condition: condition ANDAND compare
   47          | condition OROR compare
   48          | compare

   49 compare: expr CMP expr

   50 expr: expr '+' expr
   51     | expr '-' expr
   52     | expr '*' expr
   53     | expr '/' expr
   54     | '(' expr ')'
   55     | int_opt

   56 opt: icode_vec_index
   57    | icode_func
   58    | int_opt

   59 icode_vec_index: TMP_VEC_IDENT '(' index_list ')'
   60                | IN_IDENT '(' index_list ')'
   61                | OUT_IDENT '(' index_list ')'

   62 index_list: int_opt index_list
   63           | int_opt

   64 int_opt: INTEGER
   65        | FLOAT_IDENT
   66        | INDEX_IDENT
   67        | INT_IDENT
   68        | IN_IDENT
   69        | OUT_IDENT
   70        | TMP_VEC_IDENT
   71        | ICODE_SCALAR_PAT
   72        | icode_dot

   73 icode_dot: ICODE_MATRIX_PAT '.' IDENT
   74          | IN_IDENT '.' IDENT
   75          | OUT_IDENT '.' IDENT
   76          | TMP_VEC_IDENT '.' IDENT

   77 icode_func: W '(' int_opt ',' int_opt ',' int_opt ')'
   78           | W '(' int_opt ',' int_opt ')'

   79 value: INTEGER
   80      | DOUBLE
   81      | COMPLEX

   82 icode_ident: INDEX_IDENT
   83            | FLOAT_IDENT
   84            | INT_IDENT
   85            | icode_vec_index


Terminals, with rules where they appear

$end (0) 0
'#' (35) 11 12
'(' (40) 13 20 39 54 59 60 61 77 78
')' (41) 13 19 20 39 54 59 60 61 77 78
'*' (42) 32 36 52
'+' (43) 30 34 50
',' (44) 27 39 77 78
'-' (45) 31 35 51
'.' (46) 73 74 75 76
'/' (47) 33 37 53
'=' (61) 27 29 30 31 32 33
'[' (91) 45
']' (93) 45
error (256)
INTEGER (258) 18 64 79
DOUBLE (259) 80
COMPLEX (260) 81
IDENT (261) 10 11 12 13 19 20 44 73 74 75 76
LIST (262)
COMMENT (263) 4
ICODE_MATRIX_PAT (264) 16 39 73
ICODE_SCALAR_PAT (265) 17 71
IN_IDENT (266) 60 68 74
OUT_IDENT (267) 61 69 75
INDEX_IDENT (268) 27 66 82
FLOAT_IDENT (269) 65 83
TMP_VEC_IDENT (270) 59 70 76
INT_IDENT (271) 67 84
W (272) 77 78
DO (273) 27
END (274) 28
TEMPLATE (275) 13
DEFINE (276) 19
ANDAND (277) 46
OROR (278) 47
SUBNAME (279) 11
SHAPE (280) 12
CMP (281) 49
UMINUS (282)


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
start (41)
    on left: 1, on right: 0
stmt_list (42)
    on left: 2 3, on right: 1 2
stmt (43)
    on left: 4 5 6 7 8 9 10, on right: 2 3
directive (44)
    on left: 11 12, on right: 5 8
template (45)
    on left: 13, on right: 5 6
pattern_list (46)
    on left: 14 15, on right: 13 14
pattern (47)
    on left: 16 17 18, on right: 14 15
define (48)
    on left: 19, on right: 7
call (49)
    on left: 20, on right: 8 9 43
icode_stmt_list (50)
    on left: 21 22, on right: 13 21
icode_stmt (51)
    on left: 23 24 25 26, on right: 21 22
icode_do_stmt (52)
    on left: 27, on right: 23
icode_end_stmt (53)
    on left: 28, on right: 24
icode_assign_stmt (54)
    on left: 29 30 31 32 33, on right: 25
icode_expr (55)
    on left: 34 35 36 37 38, on right: 27
icode_matrix_call (56)
    on left: 39, on right: 26
listsequence (57)
    on left: 40 41, on right: 19 20 40
listelement (58)
    on left: 42 43 44, on right: 40 41
cond (59)
    on left: 45, on right: 13
condition (60)
    on left: 46 47 48, on right: 45 46 47
compare (61)
    on left: 49, on right: 46 47 48
expr (62)
    on left: 50 51 52 53 54 55, on right: 49 50 51 52 53 54
opt (63)
    on left: 56 57 58, on right: 29 30 31 32 33 34 35 36 37 38 39
icode_vec_index (64)
    on left: 59 60 61, on right: 56 85
index_list (65)
    on left: 62 63, on right: 59 60 61 62
int_opt (66)
    on left: 64 65 66 67 68 69 70 71 72, on right: 55 58 62 63 77 78
icode_dot (67)
    on left: 73 74 75 76, on right: 72
icode_func (68)
    on left: 77 78, on right: 57
value (69)
    on left: 79 80 81, on right: 42
icode_ident (70)
    on left: 82 83 84 85, on right: 29 30 31 32 33


state 0

    0 $accept: . start $end

    IDENT     shift, and go to state 1
    COMMENT   shift, and go to state 2
    TEMPLATE  shift, and go to state 3
    DEFINE    shift, and go to state 4
    '('       shift, and go to state 5
    '#'       shift, and go to state 6

    start      go to state 7
    stmt_list  go to state 8
    stmt       go to state 9
    directive  go to state 10
    template   go to state 11
    define     go to state 12
    call       go to state 13


state 1

   10 stmt: IDENT .

    $default  reduce using rule 10 (stmt)


state 2

    4 stmt: COMMENT .

    $default  reduce using rule 4 (stmt)


state 3

   13 template: TEMPLATE . '(' IDENT pattern_list ')' cond '(' icode_stmt_list ')' ')'

    '('  shift, and go to state 14


state 4

   19 define: DEFINE . IDENT listsequence ')'

    IDENT  shift, and go to state 15


state 5

   20 call: '(' . IDENT listsequence ')'

    IDENT  shift, and go to state 16


state 6

   11 directive: '#' . SUBNAME IDENT
   12          | '#' . SHAPE IDENT IDENT

    SUBNAME  shift, and go to state 17
    SHAPE    shift, and go to state 18


state 7

    0 $accept: start . $end

    $end  shift, and go to state 19


state 8

    1 start: stmt_list .

    $default  reduce using rule 1 (start)


state 9

    2 stmt_list: stmt . stmt_list
    3          | stmt .

    IDENT     shift, and go to state 1
    COMMENT   shift, and go to state 2
    TEMPLATE  shift, and go to state 3
    DEFINE    shift, and go to state 4
    '('       shift, and go to state 5
    '#'       shift, and go to state 6

    $default  reduce using rule 3 (stmt_list)

    stmt_list  go to state 20
    stmt       go to state 9
    directive  go to state 10
    template   go to state 11
    define     go to state 12
    call       go to state 13


state 10

    5 stmt: directive . template
    8     | directive . call

    TEMPLATE  shift, and go to state 3
    '('       shift, and go to state 5

    template  go to state 21
    call      go to state 22


state 11

    6 stmt: template .

    $default  reduce using rule 6 (stmt)


state 12

    7 stmt: define .

    $default  reduce using rule 7 (stmt)


state 13

    9 stmt: call .

    $default  reduce using rule 9 (stmt)


state 14

   13 template: TEMPLATE '(' . IDENT pattern_list ')' cond '(' icode_stmt_list ')' ')'

    IDENT  shift, and go to state 23


state 15

   19 define: DEFINE IDENT . listsequence ')'

    INTEGER  shift, and go to state 24
    DOUBLE   shift, and go to state 25
    COMPLEX  shift, and go to state 26
    IDENT    shift, and go to state 27
    '('      shift, and go to state 5

    call          go to state 28
    listsequence  go to state 29
    listelement   go to state 30
    value         go to state 31


state 16

   20 call: '(' IDENT . listsequence ')'

    INTEGER  shift, and go to state 24
    DOUBLE   shift, and go to state 25
    COMPLEX  shift, and go to state 26
    IDENT    shift, and go to state 27
    '('      shift, and go to state 5

    call          go to state 28
    listsequence  go to state 32
    listelement   go to state 30
    value         go to state 31


state 17

   11 directive: '#' SUBNAME . IDENT

    IDENT  shift, and go to state 33


state 18

   12 directive: '#' SHAPE . IDENT IDENT

    IDENT  shift, and go to state 34


state 19

    0 $accept: start $end .

    $default  accept


state 20

    2 stmt_list: stmt stmt_list .

    $default  reduce using rule 2 (stmt_list)


state 21

    5 stmt: directive template .

    $default  reduce using rule 5 (stmt)


state 22

    8 stmt: directive call .

    $default  reduce using rule 8 (stmt)


state 23

   13 template: TEMPLATE '(' IDENT . pattern_list ')' cond '(' icode_stmt_list ')' ')'

    INTEGER           shift, and go to state 35
    ICODE_MATRIX_PAT  shift, and go to state 36
    ICODE_SCALAR_PAT  shift, and go to state 37

    pattern_list  go to state 38
    pattern       go to state 39


state 24

   79 value: INTEGER .

    $default  reduce using rule 79 (value)


state 25

   80 value: DOUBLE .

    $default  reduce using rule 80 (value)


state 26

   81 value: COMPLEX .

    $default  reduce using rule 81 (value)


state 27

   44 listelement: IDENT .

    $default  reduce using rule 44 (listelement)


state 28

   43 listelement: call .

    $default  reduce using rule 43 (listelement)


state 29

   19 define: DEFINE IDENT listsequence . ')'

    ')'  shift, and go to state 40


state 30

   40 listsequence: listelement . listsequence
   41             | listelement .

    INTEGER  shift, and go to state 24
    DOUBLE   shift, and go to state 25
    COMPLEX  shift, and go to state 26
    IDENT    shift, and go to state 27
    '('      shift, and go to state 5

    $default  reduce using rule 41 (listsequence)

    call          go to state 28
    listsequence  go to state 41
    listelement   go to state 30
    value         go to state 31


state 31

   42 listelement: value .

    $default  reduce using rule 42 (listelement)


state 32

   20 call: '(' IDENT listsequence . ')'

    ')'  shift, and go to state 42


state 33

   11 directive: '#' SUBNAME IDENT .

    $default  reduce using rule 11 (directive)


state 34

   12 directive: '#' SHAPE IDENT . IDENT

    IDENT  shift, and go to state 43


state 35

   18 pattern: INTEGER .

    $default  reduce using rule 18 (pattern)


state 36

   16 pattern: ICODE_MATRIX_PAT .

    $default  reduce using rule 16 (pattern)


state 37

   17 pattern: ICODE_SCALAR_PAT .

    $default  reduce using rule 17 (pattern)


state 38

   13 template: TEMPLATE '(' IDENT pattern_list . ')' cond '(' icode_stmt_list ')' ')'

    ')'  shift, and go to state 44


state 39

   14 pattern_list: pattern . pattern_list
   15             | pattern .

    INTEGER           shift, and go to state 35
    ICODE_MATRIX_PAT  shift, and go to state 36
    ICODE_SCALAR_PAT  shift, and go to state 37

    $default  reduce using rule 15 (pattern_list)

    pattern_list  go to state 45
    pattern       go to state 39


state 40

   19 define: DEFINE IDENT listsequence ')' .

    $default  reduce using rule 19 (define)


state 41

   40 listsequence: listelement listsequence .

    $default  reduce using rule 40 (listsequence)


state 42

   20 call: '(' IDENT listsequence ')' .

    $default  reduce using rule 20 (call)


state 43

   12 directive: '#' SHAPE IDENT IDENT .

    $default  reduce using rule 12 (directive)


state 44

   13 template: TEMPLATE '(' IDENT pattern_list ')' . cond '(' icode_stmt_list ')' ')'

    '['  shift, and go to state 46

    cond  go to state 47


state 45

   14 pattern_list: pattern pattern_list .

    $default  reduce using rule 14 (pattern_list)


state 46

   45 cond: '[' . condition ']'

    INTEGER           shift, and go to state 48
    ICODE_MATRIX_PAT  shift, and go to state 49
    ICODE_SCALAR_PAT  shift, and go to state 50
    IN_IDENT          shift, and go to state 51
    OUT_IDENT         shift, and go to state 52
    INDEX_IDENT       shift, and go to state 53
    FLOAT_IDENT       shift, and go to state 54
    TMP_VEC_IDENT     shift, and go to state 55
    INT_IDENT         shift, and go to state 56
    '('               shift, and go to state 57

    condition  go to state 58
    compare    go to state 59
    expr       go to state 60
    int_opt    go to state 61
    icode_dot  go to state 62


state 47

   13 template: TEMPLATE '(' IDENT pattern_list ')' cond . '(' icode_stmt_list ')' ')'

    '('  shift, and go to state 63


state 48

   64 int_opt: INTEGER .

    $default  reduce using rule 64 (int_opt)


state 49

   73 icode_dot: ICODE_MATRIX_PAT . '.' IDENT

    '.'  shift, and go to state 64


state 50

   71 int_opt: ICODE_SCALAR_PAT .

    $default  reduce using rule 71 (int_opt)


state 51

   68 int_opt: IN_IDENT .
   74 icode_dot: IN_IDENT . '.' IDENT

    '.'  shift, and go to state 65

    $default  reduce using rule 68 (int_opt)


state 52

   69 int_opt: OUT_IDENT .
   75 icode_dot: OUT_IDENT . '.' IDENT

    '.'  shift, and go to state 66

    $default  reduce using rule 69 (int_opt)


state 53

   66 int_opt: INDEX_IDENT .

    $default  reduce using rule 66 (int_opt)


state 54

   65 int_opt: FLOAT_IDENT .

    $default  reduce using rule 65 (int_opt)


state 55

   70 int_opt: TMP_VEC_IDENT .
   76 icode_dot: TMP_VEC_IDENT . '.' IDENT

    '.'  shift, and go to state 67

    $default  reduce using rule 70 (int_opt)


state 56

   67 int_opt: INT_IDENT .

    $default  reduce using rule 67 (int_opt)


state 57

   54 expr: '(' . expr ')'

    INTEGER           shift, and go to state 48
    ICODE_MATRIX_PAT  shift, and go to state 49
    ICODE_SCALAR_PAT  shift, and go to state 50
    IN_IDENT          shift, and go to state 51
    OUT_IDENT         shift, and go to state 52
    INDEX_IDENT       shift, and go to state 53
    FLOAT_IDENT       shift, and go to state 54
    TMP_VEC_IDENT     shift, and go to state 55
    INT_IDENT         shift, and go to state 56
    '('               shift, and go to state 57

    expr       go to state 68
    int_opt    go to state 61
    icode_dot  go to state 62


state 58

   45 cond: '[' condition . ']'
   46 condition: condition . ANDAND compare
   47          | condition . OROR compare

    ANDAND  shift, and go to state 69
    OROR    shift, and go to state 70
    ']'     shift, and go to state 71


state 59

   48 condition: compare .

    $default  reduce using rule 48 (condition)


state 60

   49 compare: expr . CMP expr
   50 expr: expr . '+' expr
   51     | expr . '-' expr
   52     | expr . '*' expr
   53     | expr . '/' expr

    CMP  shift, and go to state 72
    '+'  shift, and go to state 73
    '-'  shift, and go to state 74
    '*'  shift, and go to state 75
    '/'  shift, and go to state 76


state 61

   55 expr: int_opt .

    $default  reduce using rule 55 (expr)


state 62

   72 int_opt: icode_dot .

    $default  reduce using rule 72 (int_opt)


state 63

   13 template: TEMPLATE '(' IDENT pattern_list ')' cond '(' . icode_stmt_list ')' ')'

    ICODE_MATRIX_PAT  shift, and go to state 77
    IN_IDENT          shift, and go to state 78
    OUT_IDENT         shift, and go to state 79
    INDEX_IDENT       shift, and go to state 80
    FLOAT_IDENT       shift, and go to state 81
    TMP_VEC_IDENT     shift, and go to state 82
    INT_IDENT         shift, and go to state 83
    DO                shift, and go to state 84
    END               shift, and go to state 85

    icode_stmt_list    go to state 86
    icode_stmt         go to state 87
    icode_do_stmt      go to state 88
    icode_end_stmt     go to state 89
    icode_assign_stmt  go to state 90
    icode_matrix_call  go to state 91
    icode_vec_index    go to state 92
    icode_ident        go to state 93


state 64

   73 icode_dot: ICODE_MATRIX_PAT '.' . IDENT

    IDENT  shift, and go to state 94


state 65

   74 icode_dot: IN_IDENT '.' . IDENT

    IDENT  shift, and go to state 95


state 66

   75 icode_dot: OUT_IDENT '.' . IDENT

    IDENT  shift, and go to state 96


state 67

   76 icode_dot: TMP_VEC_IDENT '.' . IDENT

    IDENT  shift, and go to state 97


state 68

   50 expr: expr . '+' expr
   51     | expr . '-' expr
   52     | expr . '*' expr
   53     | expr . '/' expr
   54     | '(' expr . ')'

    '+'  shift, and go to state 73
    '-'  shift, and go to state 74
    '*'  shift, and go to state 75
    '/'  shift, and go to state 76
    ')'  shift, and go to state 98


state 69

   46 condition: condition ANDAND . compare

    INTEGER           shift, and go to state 48
    ICODE_MATRIX_PAT  shift, and go to state 49
    ICODE_SCALAR_PAT  shift, and go to state 50
    IN_IDENT          shift, and go to state 51
    OUT_IDENT         shift, and go to state 52
    INDEX_IDENT       shift, and go to state 53
    FLOAT_IDENT       shift, and go to state 54
    TMP_VEC_IDENT     shift, and go to state 55
    INT_IDENT         shift, and go to state 56
    '('               shift, and go to state 57

    compare    go to state 99
    expr       go to state 60
    int_opt    go to state 61
    icode_dot  go to state 62


state 70

   47 condition: condition OROR . compare

    INTEGER           shift, and go to state 48
    ICODE_MATRIX_PAT  shift, and go to state 49
    ICODE_SCALAR_PAT  shift, and go to state 50
    IN_IDENT          shift, and go to state 51
    OUT_IDENT         shift, and go to state 52
    INDEX_IDENT       shift, and go to state 53
    FLOAT_IDENT       shift, and go to state 54
    TMP_VEC_IDENT     shift, and go to state 55
    INT_IDENT         shift, and go to state 56
    '('               shift, and go to state 57

    compare    go to state 100
    expr       go to state 60
    int_opt    go to state 61
    icode_dot  go to state 62


state 71

   45 cond: '[' condition ']' .

    $default  reduce using rule 45 (cond)


state 72

   49 compare: expr CMP . expr

    INTEGER           shift, and go to state 48
    ICODE_MATRIX_PAT  shift, and go to state 49
    ICODE_SCALAR_PAT  shift, and go to state 50
    IN_IDENT          shift, and go to state 51
    OUT_IDENT         shift, and go to state 52
    INDEX_IDENT       shift, and go to state 53
    FLOAT_IDENT       shift, and go to state 54
    TMP_VEC_IDENT     shift, and go to state 55
    INT_IDENT         shift, and go to state 56
    '('               shift, and go to state 57

    expr       go to state 101
    int_opt    go to state 61
    icode_dot  go to state 62


state 73

   50 expr: expr '+' . expr

    INTEGER           shift, and go to state 48
    ICODE_MATRIX_PAT  shift, and go to state 49
    ICODE_SCALAR_PAT  shift, and go to state 50
    IN_IDENT          shift, and go to state 51
    OUT_IDENT         shift, and go to state 52
    INDEX_IDENT       shift, and go to state 53
    FLOAT_IDENT       shift, and go to state 54
    TMP_VEC_IDENT     shift, and go to state 55
    INT_IDENT         shift, and go to state 56
    '('               shift, and go to state 57

    expr       go to state 102
    int_opt    go to state 61
    icode_dot  go to state 62


state 74

   51 expr: expr '-' . expr

    INTEGER           shift, and go to state 48
    ICODE_MATRIX_PAT  shift, and go to state 49
    ICODE_SCALAR_PAT  shift, and go to state 50
    IN_IDENT          shift, and go to state 51
    OUT_IDENT         shift, and go to state 52
    INDEX_IDENT       shift, and go to state 53
    FLOAT_IDENT       shift, and go to state 54
    TMP_VEC_IDENT     shift, and go to state 55
    INT_IDENT         shift, and go to state 56
    '('               shift, and go to state 57

    expr       go to state 103
    int_opt    go to state 61
    icode_dot  go to state 62


state 75

   52 expr: expr '*' . expr

    INTEGER           shift, and go to state 48
    ICODE_MATRIX_PAT  shift, and go to state 49
    ICODE_SCALAR_PAT  shift, and go to state 50
    IN_IDENT          shift, and go to state 51
    OUT_IDENT         shift, and go to state 52
    INDEX_IDENT       shift, and go to state 53
    FLOAT_IDENT       shift, and go to state 54
    TMP_VEC_IDENT     shift, and go to state 55
    INT_IDENT         shift, and go to state 56
    '('               shift, and go to state 57

    expr       go to state 104
    int_opt    go to state 61
    icode_dot  go to state 62


state 76

   53 expr: expr '/' . expr

    INTEGER           shift, and go to state 48
    ICODE_MATRIX_PAT  shift, and go to state 49
    ICODE_SCALAR_PAT  shift, and go to state 50
    IN_IDENT          shift, and go to state 51
    OUT_IDENT         shift, and go to state 52
    INDEX_IDENT       shift, and go to state 53
    FLOAT_IDENT       shift, and go to state 54
    TMP_VEC_IDENT     shift, and go to state 55
    INT_IDENT         shift, and go to state 56
    '('               shift, and go to state 57

    expr       go to state 105
    int_opt    go to state 61
    icode_dot  go to state 62


state 77

   39 icode_matrix_call: ICODE_MATRIX_PAT . '(' opt ',' opt ',' opt ',' opt ',' opt ',' opt ')'

    '('  shift, and go to state 106


state 78

   60 icode_vec_index: IN_IDENT . '(' index_list ')'

    '('  shift, and go to state 107


state 79

   61 icode_vec_index: OUT_IDENT . '(' index_list ')'

    '('  shift, and go to state 108


state 80

   82 icode_ident: INDEX_IDENT .

    $default  reduce using rule 82 (icode_ident)
